--- a/style.css
+++ b/style.css
@@ -4,26 +4,26 @@ body {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	background: #355c7d;
-	background: -webkit-linear-gradient(180deg, #6c5b7b, #355c7d);
-	background: -moz-linear-gradient(180deg, #6c5b7b, #355c7d);
-	background: -ms-linear-gradient(180deg, #6c5b7b, #355c7d);
-	background: -o-linear-gradient(180deg, #6c5b7b, #355c7d);
-	background: linear-gradient(180deg, #6c5b7b, #355c7d);
+	background: #110047;
+	background: -webkit-linear-gradient(180deg, #2800a3, #110047);
+	background: -moz-linear-gradient(180deg, #2800a3, #110047);
+	background: -ms-linear-gradient(180deg, #2800a3, #110047);
+	background: -o-linear-gradient(180deg, #2800a3, #110047);
+	background: linear-gradient(180deg, #2800a3, #110047);
 }
 
 h1 {
-	font-size: 52px;
+	font-size: 56px;
 	margin-bottom: 0px;
 }
 h1,h2 {
 	font-family: 'Limelight', cursive;
-	color: #efefef;
+	color: white;
 }
 p,li,a,h3 {
 	font-family: 'Lato', sans-serif;
 	font-size: 90%;
-	color: #efefef;
+	color: #dfd6ff;
 }
 .header {
 	text-align: center;
@@ -45,19 +45,19 @@ hr {
 .menuItem {
 	text-decoration: none;
 	font-family: 'Limelight', cursive;
-	font-size: 20px;
+	font-size: 24px;
 }
 a:link {
-	color:#c06c84;
+	color:white;
 }
 a:visited {
-	color: #c06c84;
+	color:white;
 }
 a:hover {
-	color: #f8b195;
+	color:#fffa00;
 }
 a:active {
-	color: white;
+	color:white;
 }
 
 
